--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <!-- <body class="fade-in"> -->
 
           <ul class="nav-menu">
-            <li><a href="tgist.html" class="nav-link">Home</a></li>
+            <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
             <li><a href="overview.html" class="nav-link">Overview</a></li>
             <li>
@@ -269,7 +269,7 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="tgist.html" class="nav-link">Home</a></li>
+            <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
             <li><a href="overview.html" class="nav-link">Overview</a></li>
             <li>
