--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         </div>
 
         <ul class="nav-menu">
-          <li><a href="tgist.html" class="nav-link">Home</a></li>
+          <li><a href="index.html" class="nav-link">Home</a></li>
           <li><a href="about.html" class="nav-link">About Us</a></li>
           <li><a href="overview.html" class="nav-link">Overview</a></li>
           <li><a href="client.html" class="nav-link">Clients & Partners</a></li>
@@ -190,7 +190,7 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="tgist.html" class="nav-link">Home</a></li>
+            <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
             <li><a href="overview.html" class="nav-link">Overview</a></li>
             <li>
