--- a/client.html
+++ b/client.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <ul class="nav-menu">
-          <li><a href="tgist.html" class="nav-link">Home</a></li>
+          <li><a href="index.html" class="nav-link">Home</a></li>
           <li><a href="about.html" class="nav-link">About Us</a></li>
           <li><a href="overview.html" class="nav-link">Overview</a></li>
           <li>
@@ -157,7 +157,7 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="tgist.html" class="nav-link">Home</a></li>
+            <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
             <li><a href="overview.html" class="nav-link">Overview</a></li>
             <li>
