--- a/overview.html
+++ b/overview.html
@@ -25,11 +25,11 @@
         </div>
 
         <ul class="nav-menu">
-          <li><a href="tgist.html" class="nav-link">Home</a></li>
+          <li><a href="index.html" class="nav-link">Home</a></li>
           <li><a href="about.html" class="nav-link">About Us</a></li>
           <li><a href="overview.html" class="nav-link">Overview</a></li>
           <li><a href="client.html" class="nav-link">Clients & Partners</a></li>
-          <li><a href="#" class="nav-link">Contact Us</a></li>
+          <li><a href="contact.html" class="nav-link">Contact Us</a></li>
           <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
         </ul>
       </nav>
@@ -233,7 +233,7 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="tgist.html" class="nav-link">Home</a></li>
+            <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
             <li><a href="overview.html" class="nav-link">Overview</a></li>
             <li>
