--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,16 +3,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="about.css" />
-    <!-- <link rel="stylesheet" href="tgist.html" /> -->
-    <link rel="stylesheet" href="tgist.css" />
+    <link rel="stylesheet" href="/CSS/about.css" />
+    <link rel="stylesheet" href="/CSS/tgist.css" />
   </head>
   <body>
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="/images/Black on white logo.png"
+            src="../images/TGSITlogo.png"
             alt="TGSIT Logo"
             class="logo-icon"
           />
@@ -26,11 +25,13 @@
         </div>
 
         <ul class="nav-menu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="about.html" class="nav-link">About Us</a></li>
-          <li><a href="overview.html" class="nav-link">Overview</a></li>
-          <li><a href="client.html" class="nav-link">Clients & Partners</a></li>
-          <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+          <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+          <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+          <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+          <li>
+            <a href="/HTML/client.html" class="nav-link">Clients & Partners</a>
+          </li>
+          <li><a href="/HTML/contact.html" class="nav-link">Contact Us</a></li>
           <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
         </ul>
       </nav>
@@ -157,7 +158,7 @@
         </div>
       </div>
       <div style="text-align: center">
-        <a href="contact.html" class="cta-button">Partner With Us</a>
+        <a href="/HTML/contact.html" class="cta-button">Partner With Us</a>
       </div>
     </section>
 
@@ -169,7 +170,7 @@
           <!-- <img src="" alt=""> -->
           <div class="logo-container">
             <img
-              src="/images/Black on white logo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -190,13 +191,17 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="client.html" class="nav-link">Clients & Partners</a>
+              <a href="/HTML/client.html" class="nav-link"
+                >Clients & Partners</a
+              >
             </li>
-            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+            <li>
+              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+            </li>
           </ul>
         </div>
 
