--- a/HTML/client.html
+++ b/HTML/client.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clients & Partners - TGIST</title>
-    <link rel="stylesheet" href="client.css" />
-    <link rel="stylesheet" href="tgist.css" />
+    <link rel="stylesheet" href="/CSS/client.css" />
+    <link rel="stylesheet" href="/CSS/tgist.css" />
   </head>
   <body class="fade-in">
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
-          <img
-            src="/images/Black on white logo.png"
-            alt="TGSIT Logo"
-            class="logo-icon"
-          />
+          <img src="/images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
           <div class="logo-text">
             TGIST<br />
             <small>Beyond Security, Smarter Solution</small><br />
@@ -25,15 +21,15 @@
           </div>
         </div>
         <ul class="nav-menu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="about.html" class="nav-link">About Us</a></li>
-          <li><a href="overview.html" class="nav-link">Overview</a></li>
+          <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+          <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+          <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
           <li>
-            <a href="clients.html" class="nav-link active"
+            <a href="/HTML/client.html" class="nav-link active"
               >Clients & Partners</a
             >
           </li>
-          <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+          <li><a href="/HTML/contact.html" class="nav-link">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -95,7 +91,7 @@
       <h2>Featured Partners</h2>
       <div class="clients-grid">
         <div class="client-card">
-          <img src="images/icb_logo.png" alt="Integrate Commercial" />
+          <img src="../Images/icb_logo.png" alt="Integrate Commercial" />
           <h2>Integrate Commercial</h2>
           <p>
             Partnered with TGIST to strengthen their cybersecurity framework,
@@ -107,7 +103,7 @@
         <!-- Placeholder for future clients -->
         <div class="client-card">
           <img
-            src="images/Rye africa.jpg"
+            src="../Images/Rye africa.jpg"
             alt="Future Partner"
             style="opacity: 0.3"
           />
@@ -128,7 +124,7 @@
         Whether you're looking to strengthen your security posture, achieve
         compliance, or transform your IT infrastructure, we're here to help.
       </p>
-      <a href="contact.html" class="cta-button">Get in Touch</a>
+      <a href="/HTML/contact.html" class="cta-button">Get in Touch</a>
     </section>
 
     <!-- Footer -->
@@ -137,7 +133,7 @@
         <div class="footer-about">
           <div class="logo-container">
             <img
-              src="/images/Black on white logo.png"
+              src="/images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -157,13 +153,17 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="client.html" class="nav-link">Clients & Partners</a>
+              <a href="/HTML/client.html" class="nav-link"
+                >Clients & Partners</a
+              >
             </li>
-            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+            <li>
+              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+            </li>
           </ul>
         </div>
 
