--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TGIST</title>
-    <link rel="stylesheet" href="tgist.css" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="/CSS/tgist.css" />
+    <link rel="stylesheet" href="/CSS/contact.css" />
   </head>
   <body>
     <div class="one">
@@ -12,7 +12,7 @@
         <nav class="navbar">
           <div class="logo-container">
             <img
-              src="/images/Black on white logo.png"
+              src="/images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -27,13 +27,17 @@
           <!-- <body class="fade-in"> -->
 
           <ul class="nav-menu">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="client.html" class="nav-link">Clients & Partners</a>
+              <a href="/HTML/client.html" class="nav-link"
+                >Clients & Partners</a
+              >
             </li>
-            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+            <li>
+              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+            </li>
             <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
           </ul>
         </nav>
@@ -64,19 +68,16 @@
       </section>
       <div class="social-icons">
         <a href="https://facebook.com/tgist" target="_blank">
-          <img
-            src="images/facebook-logo-blue-circle-with-white-f-symbol.jpg"
-            alt="Facebook"
-          />
+          <img src="/images/facebook-logo-png-38347.png" alt="Facebook" />
         </a>
         <a href="https://linkedin.com/company/tgist" target="_blank">
-          <img src="images/inldln.png" alt="LinkedIn" />
+          <img src="/images/inldln.png" alt="LinkedIn" />
         </a>
         <a href="https://twitter.com/tgist" target="_blank">
-          <img src="images/twitter.jpg" alt="Twitter" />
+          <img src="/images/twitter.jpg" alt="Twitter" />
         </a>
         <a href="https://instagram.com/tgist" target="_blank">
-          <img src="images/insta.jpg" alt="Instagram" />
+          <img src="/images/insta.jpg" alt="Instagram" />
         </a>
       </div>
       <!-- ////footer/////-->
@@ -85,7 +86,7 @@
           <div class="footer-about">
             <div class="logo-container">
               <img
-                src="/images/Black on white logo.png"
+                src="/images/TGSITlogo.png"
                 alt="TGSIT Logo"
                 class="logo-icon"
               />
@@ -105,13 +106,19 @@
           <div class="footer-links">
             <h3>Explore</h3>
             <ul>
-              <li><a href="index.html" class="nav-link">Home</a></li>
-              <li><a href="about.html" class="nav-link">About Us</a></li>
-              <li><a href="overview.html" class="nav-link">Overview</a></li>
+              <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+              <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
               <li>
-                <a href="client.html" class="nav-link">Clients & Partners</a>
+                <a href="/HTML/overview.html" class="nav-link">Overview</a>
               </li>
-              <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+              <li>
+                <a href="/HTML/client.html" class="nav-link"
+                  >Clients & Partners</a
+                >
+              </li>
+              <li>
+                <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
 
