--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TGIST</title>
-    <link rel="stylesheet" href="tgist.css" />
+    <link rel="stylesheet" href="/CSS/tgist.css" />
   </head>
   <body>
     <div class="one">
@@ -11,7 +11,7 @@
         <nav class="navbar">
           <div class="logo-container">
             <img
-              src="/images/Black on white logo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -26,13 +26,17 @@
           <!-- <body class="fade-in"> -->
 
           <ul class="nav-menu">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="client.html" class="nav-link">Clients & Partners</a>
+              <a href="/HTML/client.html" class="nav-link"
+                >Clients & Partners</a
+              >
             </li>
-            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+            <li>
+              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+            </li>
             <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
           </ul>
         </nav>
@@ -60,7 +64,7 @@
           <blockquote>Dive in, and explore.</blockquote>
           <!-- <p class="dive">Dive in, and explore.</p> -->
           <div class="button-wrapper">
-            <a href="about.html">
+            <a href="/HTML/about.html">
               <button class="learn-button">Learn More</button>
             </a>
           </div>
@@ -88,7 +92,7 @@
       </div>
       <div class="security-column">
         <br /><br /><br />
-        <a href="contact.html" class="cta-button">Get Started</a>
+        <a href="/HTML/contact.html" class="cta-button">Get Started</a>
       </div>
     </div>
     <!-- ///fourth-path/// -->
@@ -130,7 +134,7 @@
         </p>
         <blockquote>Learn More and explore the bigger picture</blockquote>
         <div class="button-wrapper2">
-          <a href="overview.html">
+          <a href="/HTML/overview.html">
             <button class="learn-button2">Learn More</button>
           </a>
         </div>
@@ -201,7 +205,7 @@
       <div class="testimonial-carousel">
         <div class="testimonial">
           <img
-            src="./images/middle-age-woman-smiling-having-good-time.jpg"
+            src="../Images/middle-age-woman-smiling-having-good-time.jpg"
             alt="Client Logo 1"
             class="client-logo"
           />
@@ -214,7 +218,7 @@
 
         <div class="testimonial">
           <img
-            src="./images/11434204.png"
+            src="../Images/11434204.png"
             alt="Client Logo 2"
             class="client-logo"
           />
@@ -227,7 +231,7 @@
 
         <div class="testimonial">
           <img
-            src="./images/smiley-woman-couch.jpg"
+            src="../Images/smiley-woman-couch.jpg"
             alt="Client Logo 3"
             class="client-logo"
           />
@@ -248,7 +252,7 @@
           <!-- <img src="" alt=""> -->
           <div class="logo-container">
             <img
-              src="/images/Black on white logo.png"
+              src="../Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
@@ -269,13 +273,17 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="client.html" class="nav-link">Clients & Partners</a>
+              <a href="/HTML/client.html" class="nav-link"
+                >Clients & Partners</a
+              >
             </li>
-            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+            <li>
+              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+            </li>
           </ul>
         </div>
 
@@ -298,6 +306,6 @@
 
       <!-- <a href="#contact" class="floating-contact">Contact Us</a> -->
     </footer>
-    <script src="tgist.js"></script>
+    <script src="/JS/tgist.js"></script>
   </body>
 </html>
