--- a/HTML/overview.html
+++ b/HTML/overview.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="overview.css">
-    <!-- <link rel="stylesheet" href="tgist.css"> -->
+    <link rel="stylesheet" href="/CSS/overview.css">
+    <link rel="stylesheet" href="/CSS/tgist.css">
 </head>
 <body>
     <body>
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="/images/Black on white logo.png"
+            src="/images/TGSITlogo.png"
             alt="TGSIT Logo"
             class="logo-icon"
           />
@@ -25,11 +25,11 @@
         </div>
 
         <ul class="nav-menu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="about.html" class="nav-link">About Us</a></li>
-          <li><a href="overview.html" class="nav-link">Overview</a></li>
-          <li><a href="client.html" class="nav-link">Clients & Partners</a></li>
-          <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+          <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+          <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+          <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+          <li><a href="/HTML/client.html" class="nav-link">Clients & Partners</a></li>
+          <li><a href="/HTML/contact.html" class="nav-link">Contact Us</a></li>
           <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
         </ul>
       </nav>
@@ -213,7 +213,7 @@
         <div class="footer-about">
           <div class="logo-container">
              <img
-            src="/images/Black on white logo.png"
+            src="../Images/TGSITlogo.png"
             alt="TGSIT Logo"
             class="logo-icon"
           />
@@ -233,13 +233,13 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
+            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="client.html" class="nav-link">Clients & Partners</a>
+              <a href="/HTML/client.html" class="nav-link">Clients & Partners</a>
             </li>
-            <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+            <li><a href="/HTML/contact.html" class="nav-link">Contact Us</a></li>
           </ul>
         </div>
 
