Fixed image paths after folder restructure

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -10,11 +10,7 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
-          <img
-            src="../images/TGSITlogo.png"
-            alt="TGSIT Logo"
-            class="logo-icon"
-          />
+          <img src="/Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
           <div class="logo-text">
             TGIST<br />
             <small>Beyond Security, Smarter Solution</small><br />
@@ -170,7 +166,7 @@
           <!-- <img src="" alt=""> -->
           <div class="logo-container">
             <img
-              src="../Images/TGSITlogo.png"
+              src="/Images/TGSITlogo.png"
               alt="TGSIT Logo"
               class="logo-icon"
             />
