--- a/HTML/overview.html
+++ b/HTML/overview.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="/images/TGSITlogo.png"
+            src="/Images/TGSITlogo.png"
             alt="TGSIT Logo"
             class="logo-icon"
           />
