Moved HTML files to root and fixed paths

--- a/client.html
+++ b/client.html
@@ -11,7 +11,11 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
-          <img src="../Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
+          <img
+            src="../Images/TGSITlogo.png"
+            alt="TGSIT Logo"
+            class="logo-icon"
+          />
           <div class="logo-text">
             TGIST<br />
             <small>Beyond Security, Smarter Solution</small><br />
@@ -21,15 +25,15 @@
           </div>
         </div>
         <ul class="nav-menu">
-          <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-          <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-          <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+          <li><a href="/index.html" class="nav-link">Home</a></li>
+          <li><a href="/about.html" class="nav-link">About Us</a></li>
+          <li><a href="/overview.html" class="nav-link">Overview</a></li>
           <li>
-            <a href="/HTML/client.html" class="nav-link active"
+            <a href="/client.html" class="nav-link active"
               >Clients & Partners</a
             >
           </li>
-          <li><a href="/HTML/contact.html" class="nav-link">Contact Us</a></li>
+          <li><a href="/contact.html" class="nav-link">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -124,7 +128,7 @@
         Whether you're looking to strengthen your security posture, achieve
         compliance, or transform your IT infrastructure, we're here to help.
       </p>
-      <a href="/HTML/contact.html" class="cta-button">Get in Touch</a>
+      <a href="/contact.html" class="cta-button">Get in Touch</a>
     </section>
 
     <!-- Footer -->
@@ -153,16 +157,14 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/index.html" class="nav-link">Home</a></li>
+            <li><a href="/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="/HTML/client.html" class="nav-link"
-                >Clients & Partners</a
-              >
+              <a href="/client.html" class="nav-link">Clients & Partners</a>
             </li>
             <li>
-              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+              <a href="/contact.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
