--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=HTML/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TGIST</title>
     <link rel="stylesheet" href="../CSS/tgist.css" />
@@ -27,16 +26,14 @@
           <!-- <body class="fade-in"> -->
 
           <ul class="nav-menu">
-            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/index.html" class="nav-link">Home</a></li>
+            <li><a href="/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="/HTML/client.html" class="nav-link"
-                >Clients & Partners</a
-              >
+              <a href="/client.html" class="nav-link">Clients & Partners</a>
             </li>
             <li>
-              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+              <a href="/contact.html" class="nav-link">Contact Us</a>
             </li>
             <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
           </ul>
@@ -65,7 +62,7 @@
           <blockquote>Dive in, and explore.</blockquote>
           <!-- <p class="dive">Dive in, and explore.</p> -->
           <div class="button-wrapper">
-            <a href="/HTML/about.html">
+            <a href="/about.html">
               <button class="learn-button">Learn More</button>
             </a>
           </div>
@@ -93,7 +90,7 @@
       </div>
       <div class="security-column">
         <br /><br /><br />
-        <a href="/HTML/contact.html" class="cta-button">Get Started</a>
+        <a href="/contact.html" class="cta-button">Get Started</a>
       </div>
     </div>
     <!-- ///fourth-path/// -->
@@ -135,7 +132,7 @@
         </p>
         <blockquote>Learn More and explore the bigger picture</blockquote>
         <div class="button-wrapper2">
-          <a href="/HTML/overview.html">
+          <a href="/overview.html">
             <button class="learn-button2">Learn More</button>
           </a>
         </div>
@@ -274,16 +271,14 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/index.html" class="nav-link">Home</a></li>
+            <li><a href="/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="/HTML/client.html" class="nav-link"
-                >Clients & Partners</a
-              >
+              <a href="/client.html" class="nav-link">Clients & Partners</a>
             </li>
             <li>
-              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+              <a href="/contact.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
