--- a/about.html
+++ b/about.html
@@ -10,7 +10,11 @@
     <header class="header">
       <nav class="navbar">
         <div class="logo-container">
-          <img src="../Images/TGSITlogo.png" alt="TGSIT Logo" class="logo-icon" />
+          <img
+            src="../Images/TGSITlogo.png"
+            alt="TGSIT Logo"
+            class="logo-icon"
+          />
           <div class="logo-text">
             TGIST<br />
             <small>Beyond Security, Smarter Solution</small><br />
@@ -21,13 +25,13 @@
         </div>
 
         <ul class="nav-menu">
-          <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-          <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-          <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+          <li><a href="/index.html" class="nav-link">Home</a></li>
+          <li><a href="/about.html" class="nav-link">About Us</a></li>
+          <li><a href="/overview.html" class="nav-link">Overview</a></li>
           <li>
-            <a href="/HTML/client.html" class="nav-link">Clients & Partners</a>
+            <a href="/client.html" class="nav-link">Clients & Partners</a>
           </li>
-          <li><a href="/HTML/contact.html" class="nav-link">Contact Us</a></li>
+          <li><a href="/contact.html" class="nav-link">Contact Us</a></li>
           <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
         </ul>
       </nav>
@@ -154,7 +158,7 @@
         </div>
       </div>
       <div style="text-align: center">
-        <a href="/HTML/contact.html" class="cta-button">Partner With Us</a>
+        <a href="/contact.html" class="cta-button">Partner With Us</a>
       </div>
     </section>
 
@@ -187,16 +191,14 @@
         <div class="footer-links">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/index.html" class="nav-link">Home</a></li>
+            <li><a href="/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="/HTML/client.html" class="nav-link"
-                >Clients & Partners</a
-              >
+              <a href="/client.html" class="nav-link">Clients & Partners</a>
             </li>
             <li>
-              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+              <a href="/contact.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
