--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,14 @@
           <!-- <body class="fade-in"> -->
 
           <ul class="nav-menu">
-            <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-            <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
-            <li><a href="/HTML/overview.html" class="nav-link">Overview</a></li>
+            <li><a href="/index.html" class="nav-link">Home</a></li>
+            <li><a href="/about.html" class="nav-link">About Us</a></li>
+            <li><a href="/overview.html" class="nav-link">Overview</a></li>
             <li>
-              <a href="/HTML/client.html" class="nav-link"
-                >Clients & Partners</a
-              >
+              <a href="/client.html" class="nav-link">Clients & Partners</a>
             </li>
             <li>
-              <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+              <a href="/contact.html" class="nav-link">Contact Us</a>
             </li>
             <!-- <li><a href="#" class="nav-link">Blog</a></li> -->
           </ul>
@@ -106,18 +104,16 @@
           <div class="footer-links">
             <h3>Explore</h3>
             <ul>
-              <li><a href="/HTML/index.html" class="nav-link">Home</a></li>
-              <li><a href="/HTML/about.html" class="nav-link">About Us</a></li>
+              <li><a href="/index.html" class="nav-link">Home</a></li>
+              <li><a href="/about.html" class="nav-link">About Us</a></li>
               <li>
-                <a href="/HTML/overview.html" class="nav-link">Overview</a>
+                <a href="/overview.html" class="nav-link">Overview</a>
               </li>
               <li>
-                <a href="/HTML/client.html" class="nav-link"
-                  >Clients & Partners</a
-                >
+                <a href="/client.html" class="nav-link">Clients & Partners</a>
               </li>
               <li>
-                <a href="/HTML/contact.html" class="nav-link">Contact Us</a>
+                <a href="/contact.html" class="nav-link">Contact Us</a>
               </li>
             </ul>
           </div>
